src/test/ui/feature-gate-plugin.stderr
error[E0658]: compiler plugins are experimental and possibly buggy (see issue #29597)
  --> $DIR/feature-gate-plugin.rs:13:1
   |
LL | #![plugin(foo)]
   | ^^^^^^^^^^^^^^^
   |
   = help: add #![feature(plugin)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
